# django_skeleton

./: .env.example  .gitignore  Dockerfile  LLM_DESCRIPTION_FEB.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.conf  pyproject.toml  runserver.sh
apps/: __init__.py
apps/common/: __init__.py
apps/demo/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/demo/migrations/: 0001_initial.py  __init__.py
apps/demo/templates/demo/: alpine_examples.html  home.html  item_list.html
apps/demo/templates/demo/partials/: item_edit.html  item_form.html  item_row.html  item_rows.html
apps/llm_analysis/: __init__.py  admin.py  apps.py  forms.py  models.py  tests.py  urls.py  views.py
apps/llm_analysis/migrations/: 0001_initial.py  0002_default_data.py  0003_rename_llm_analysi_user_id_1d56e0_idx_llm_analysi_user_id_5ede14_idx_and_more.py
apps/llm_analysis/services/: __init__.py  bedrock.py  demo.py  guardrails.py  output_parser.py  security.py
apps/llm_analysis/templates/llm_analysis/: analysis.html  audit_log_detail.html  audit_logs.html  history.html
apps/llm_analysis/templates/llm_analysis/partials/: error.html  explanation.html  hypothesis_card.html  results.html  search_result.html  template_form.html  (+1 more)
config/: __init__.py  api_urls.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
config/settings/: __init__.py  base.py  local.py  production.py
static/css/: main.css
static/js/: main.js
templates/: 404.html  500.html  base.html  home.html
templates/registration/: login.html
