[project]
name = "django-skeleton"
version = "0.1.0"
description = "A Django boilerplate with HTMX, Alpine.js, and Tailwind CSS"
authors = [
    {name = "Django Skeleton"}
]
readme = "README.md"
requires-python = "^3.10"
dependencies = [
    "django (>=5.2.8,<6.0.0)",
    "django-htmx (>=1.26.0,<2.0.0)",
    "django-extensions (>=4.1,<5.0)",
    "whitenoise (>=6.11.0,<7.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "redis (>=7.0.1,<8.0.0)",
    "hiredis (>=3.3.0,<4.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)",
    "pillow (>=12.0.0,<13.0.0)",
    "celery (>=5.5.3,<6.0.0)",
    "django-redis (>=6.0.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pytest-django = "^4.11.1"
black = "^25.11.0"
isort = "^7.0.0"
flake8 = "^7.3.0"
mypy = "^1.18.2"
django-stubs = "^5.2.7"

